objects/User.object
<CustomObject>
    <fields>
        <fullName>CSDirector__c</fullName>
        <description>Indicates the client services director that should be copied on the 1st level approval email message for opportunities.</description>
        <label>CS Director</label>
        <relationshipName>CSDirector</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full SFDC</fullName>
                </value>
                <value>
                    <fullName>Full &amp; PSA</fullName>
                </value>
                <value>
                    <fullName>PSA Only</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <description>User Subregion will default the opportunity´s subregion at the opportunity level.</description>
        <inlineHelpText>User Subregion will default the opportunity´s subregion at the opportunity level.</inlineHelpText>
        <label>Subregion</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <sharingModel>Read</sharingModel>
</CustomObject>